project card overflow fixed

--- a/src/components/projects/project.css
+++ b/src/components/projects/project.css
@@ -15,7 +15,8 @@
     border-radius: 1rem;
     display: flex;
     gap: 2rem;
-
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .project-card{
